Un JSify homepage footer and add mastodon link
Signed-off-by: Mauro Morales <mauro.morales@spectrocloud.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,26 @@
 <footer>
-    <div id="footer-content"></div>
+    <div id="footer-content">
+        <div>
+            <div class="footer-logo">
+                <img src="/index/footer-logo.png" alt="Kairos Logo" loading="lazy">
+                <div class="footer-text">Project supported by <span> Spectro Cloud</span></div>
+            </div>
+            <div class="footer-follow-us">Follow us
+                <div>
+                    <a href="https://twitter.com/Kairos_OSS" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://github.com/kairos-io/kairos" target="_blank">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://www.youtube.com/@kairos_oss" target="_blank">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a rel="me" href="https://fosstodon.org/@kairos_OSS" target="_blank">
+                        <i class="fa-brands fa-mastodon"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
