--- a/layouts/shortcodes/image.html
+++ b/layouts/shortcodes/image.html
@@ -27,7 +27,7 @@ kairos-
 -
 {{- $.Page.Site.Params.softwareVersions.kairos_version -}}
 {{- if eq (.Get "variant") "standard" -}}
-    -k3s{{- replace $.Page.Site.Params.softwareVersions.k3s_version "+" "-" -}}
+    -k3s{{$.Page.Site.Params.softwareVersions.k3s_version | safeHTML }}
 {{- end -}}
 {{- with .Get "suffix" -}}
     -{{- . -}}
