Move images into the assets section
Signed-off-by: Mauro Morales <contact@mauromorales.com>

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -27,3 +27,15 @@ a:hover {
 .td-navbar .navbar-brand__name {
     display: none;
 }
+
+.download-card-wrap i {
+    color: #EE5007;
+    margin-left: auto;
+    font-size: 1rem;
+}
+
+.press-cards i {
+    color: #EE5007;
+    margin-left: 1rem;
+    font-size: 0.7rem;
+}
