landing_page: change wording and welcome text
Signed-off-by: mudler <mudler@kairos.io>

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -381,6 +381,11 @@ footer {
     padding-right: 32px;
 }
 
+.sclogo{
+    max-width: 167px;
+    padding-left: 22px;
+}
+
 .footer-text {
     margin-top: 4px;
     padding-left: 32px;
