--- a/layouts/index.html
+++ b/layouts/index.html
@@ -56,12 +56,10 @@
 
             <div class="hero-wrapper astro-7XAARZHW">
               <h1 class="title astro-7XAARZHW">
-                Edge, but <span class="astro-7XAARZHW">better</span>
+                More than an <span class="astro-7XAARZHW">edge OS</span>
               </h1>
               <span class="subtitle astro-7XAARZHW">
-                Transform any Linux system into a secure,
-                customizable, and easily managed platform
-                for edge computing.</span>
+                Transform your Linux system and preferred Kubernetes distribution into a secure bootable image for your edge devices.</span>
               <div class="buttons astro-7XAARZHW">
                 <a id="quickstart" href="/docs/getting-started/" class="astro-7XAARZHW">
                   Quick Start
